[package]
name = "ping-rs"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"
build = "build/main.rs"

[build-dependencies]
convert_case = "0.6.0"
quote = "1.0"
proc-macro2 = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
serialport = "4.3.0"
clap = { version = "3.1.6", features = ["derive"] }

[features]
default = []
libudev = ["mio-serial/libudev"]
rt = ["tokio/rt-multi-thread"]
codec = ["tokio-util/codec", "bytes"]

[dependencies]
tokio-serial = "5.4.4"

[dependencies.futures]
version = "0.3"

[dependencies.tokio]
version = "^1.8"
default-features = false
features = ["net"]

[dependencies.tokio-util]
version = "0.7"
default-features = false
optional = true

[dependencies.mio-serial]
version = "5.0.3"
default-features = false

[dependencies.bytes]
version = "1"
default-features = false
optional = true

[dependencies.log]
version = "0.4"

[dependencies.cfg-if]
version = "1"

[dev-dependencies.tokio]
version = "^1.8"
features = ["macros", "rt", "process", "time", "fs", "io-util"]
default-features = false

[dev-dependencies.env_logger]
version = "0.10.0"

[[example]]
name = "ping_async"
path = "examples/ping_async.rs"
required-features = ["rt", "codec"]
